--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-transform-boilerplate",
-  "version": "1.0.0",
-  "description": "A new Webpack boilerplate with hot reloading React components, and error handling on module and component level.",
+  "name": "silas",
+  "version": "0.1.0",
+  "description": "Silas integrates lyrics and songs.",
   "scripts": {
     "clean": "rimraf dist",
     "build:webpack": "NODE_ENV=production webpack --config webpack.config.prod.js",
@@ -26,8 +26,8 @@
     "babel",
     "react-transform"
   ],
-  "author": "Dan Abramov <dan.abramov@me.com> (http://github.com/gaearon)",
-  "license": "CC0-1.0",
+  "author": "Crossroad Church Seaton www.crossroad.org.uk",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/gaearon/react-transform-boilerplate/issues"
   },
@@ -53,6 +53,8 @@
   },
   "dependencies": {
     "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "react-bootstrap": "^0.28.1",
+    "react-dom": "^0.14.3",
+    "react-sidebar": "^2.0.0"
   }
 }
