--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "clean": "rimraf dist",
     "build:webpack": "NODE_ENV=production webpack --config webpack.config.prod.js",
     "build": "npm run clean && npm run build:webpack",
+    "production": "npm run build:webpack && node server.js",
     "start": "node devServer.js",
     "lint": "eslint src"
   },
