--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "webpack-hot-middleware": "^2.6.0"
   },
   "dependencies": {
+    "json-loader": "^0.5.4",
     "react": "^0.14.3",
     "react-bootstrap": "^0.28.1",
     "react-dom": "^0.14.3",
