--- a/package.json
+++ b/package.json
@@ -53,11 +53,17 @@
     "webpack-hot-middleware": "^2.6.0"
   },
   "dependencies": {
+    "babel-core": "^6.4.0",
+    "cors": "^2.7.1",
     "json-loader": "^0.5.4",
     "react": "^0.14.3",
     "react-bootstrap": "^0.28.1",
     "react-dom": "^0.14.3",
+    "react-jsxrender": "0.0.1",
+    "react-loading": "0.0.7",
+    "react-refetch": "^0.6.0",
     "react-sidebar": "^2.0.0",
-    "superagent": "^1.5.0"
+    "superagent": "^1.5.0",
+    "verbal-expressions": "^0.1.2"
   }
 }
